@@ -164,7 +164,7 @@
     ["Backward 1 Year" calendar-backward-year])
   "Key map for \"Scroll\" menu in the calendar.")
 
-(declare-function x-popup-menu "xmenu.c" (position menu))
+(declare-function x-popup-menu "menu.c" (position menu))
 
 (defmacro cal-menu-x-popup-menu (event title &rest body)
   "Call `x-popup-menu' at position EVENT, with TITLE and contents BODY.
